Update Portfolio links, fix alignment on landing page

--- a/styles/contact-me.css
+++ b/styles/contact-me.css
@@ -29,7 +29,7 @@ img:hover {
 	/* 	box-shadow: 1px 1px 10px #60a5fa; */
 	cursor: pointer;
 	transform: scale(1.2);
-	transition-delay: 0.6s;
+	transition: all 0.25s 0s ease-in-out;
 }
 
 img:active {
